tried to avoid horizontal scroll

--- a/scss/agency.scss
+++ b/scss/agency.scss
@@ -174,6 +174,8 @@ header {
     @include background-cover;
     text-align: center;
     color: white;
+    margin-right: 0;
+    margin-left: 0;
     .intro-text {
         padding-top: 100px;
         padding-bottom: 50px;
